# AgentShiro

./: .gitignore  README.md  RESEARCH_AGENT_PLAN.md  RUST_IMPLEMENTATION_SUMMARY.md  RUST_QUICKSTART.md  dockerfile  life-assistant.py  main.py  pyproject.toml  run_lfm.py  run_tests.py  screenshot.sh  test_litellm.py  togglescreenshot.sh
agentshiro/: __init__.py  agent.py  loop.py  prompts.py  session.py
agentshiro/llm/: __init__.py  base.py  custom.py
agentshiro/tools/: __init__.py  base.py  bash.py  calculator.py
dataset/: test_cases.json
docs/: TEST_FRAMEWORK.md  life-assistant-bench.md  program.md  simulator.md  whatwewant.md
eval/: evaluator.py
life_agent/: __init__.py  context.py  gamification.py  prompt_builder.py  prompts.py  storage.py  tools.py
research_agent/: README.md  __init__.py  agent.py  example.py  prompts.py  schema.py  utils.py
research_agent/docs/: whatitwas.md
research_agent/implementations/: __init__.py
research_agent/providers/: __init__.py  fetch_provider.py  llm_provider.py  search_provider.py
rust/: .gitignore  Cargo.toml  README.md
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/src/agent/: agentloop.rs  core.rs  mod.rs  session.rs
rust/src/cli/: agent_cli.rs  life_assistant.rs  mod.rs
rust/src/life_agent/: agent.rs  config.rs  mod.rs  prompts.rs  storage.rs  tools.rs
rust/src/models/: mod.rs
rust/src/providers/: litellm.rs  mod.rs  nvidia.rs  openai.rs  shiro_custom.rs
rust/src/tools/: mod.rs
rust/src/tools/builtin/: file_ops.rs  mod.rs
rust/src/utils/: config.rs  logging.rs  mod.rs
(+12 files in other folders)
