[package]
name = "agentshiro"
version = "0.1.0"
edition = "2021"
description = "AgentShiro agent framework in Rust"
authors = ["Boopathi"]

[[bin]]
name = "agentshiro-cli"
path = "src/bin/agentshiro_cli.rs"

[[bin]]
name = "life-assistant-cli"
path = "src/bin/life_assistant_cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
regex = "1"
litellm-rs = { version = "0.4", features = ["lite"] } 

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
